@@ -60,7 +60,7 @@ public interface StoreFuncInterface {
 
     /**
      * Return the OutputFormat associated with StoreFuncInterface.  This will be called
-     * on the front end during planning and not on the backend during
+     * on the front end during planning and on the backend during
      * execution. 
      * @return the {@link OutputFormat} associated with StoreFuncInterface
      * @throws IOException if an exception occurs while constructing the 
